# LightFold

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: LightFold.h
include/math/: tangent.h
src/: LightFold.cpp
